feat: update html metadata

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Tyler Hirschel - Software Engineer</title>
-    <meta name="description" content="" />
+    <meta name="description" content="Chicago based, full stack, software engineer">
 </head>
 <body style="display: none;">
 <div id="main">
